--- a/service/core/src/main/resources/strings/core-roles_pt_BR.properties
+++ b/service/core/src/main/resources/strings/core-roles_pt_BR.properties
@@ -1,26 +1,26 @@
-core.roles.master.name=Master
-core.roles.master.description=Permissão master do sistema, com acesso a todas as funcionalidades
-core.roles.role_user_read.name=Leitura de usuário
-core.roles.role_user_read.description=Permissão para leitura dos dados de usuário
-core.roles.role_user_create.name=Criação de usuário
-core.roles.role_user_create.description=Permissão para criação de um novo usuário do sistema
-core.roles.role_user_update.name=Edição de usuário
-core.roles.role_user_update.description=Permissão para edição dos dados e permissões de um usuário do sistema
-core.roles.role_group_read.name=Leitura de grupo 
-core.roles.role_group_read.description=Permissão para leitura dos dados de grupo
-core.roles.role_group_create.name=Criação de grupo
-core.roles.role_group_create.description=Permissão para criação de um novo grupo do sistema
-core.roles.role_group_update.name=Edição de grupo
-core.roles.role_group_update.description=Permissão para edição dos dados e permissões de um grupo do sistema
-core.roles.role_group_delete.name=Exclusão de grupo
-core.roles.role_group_delete.description=Permissão para exclusão de um grupo do sistema
-core.roles.role_person_search.name=Pesquisa de Pessoas
-core.roles.role_person_search.description=Permissão para pesquisa de Pessoas
-core.roles.role_company_search.name=Pesquisa de Empresas
-core.roles.role_company_search.description=Permissão para pesquisa de Empresas
-core.roles.role_vehicle_search.name=Pesquisa de Veículos
-core.roles.role_vehicle_search.description=Permissão para pesquisa de Veículos
-core.roles.role_address_search.name=Pesquisa de CEPs
-core.roles.role_address_search.description=Permissão para pesquisa de CEPs
-core.roles.role_finance_data.name=Controle Financeiro
-core.roles.role_finance_data.description=Permissão para controle financeiro do usuário
+security.role.master.name=Master
+security.role.master.description=Permissão master do sistema, com acesso a todas as funcionalidades
+security.role.role_user_read.name=Leitura de usuário
+security.role.role_user_read.description=Permissão para leitura dos dados de usuário
+security.role.role_user_create.name=Criação de usuário
+security.role.role_user_create.description=Permissão para criação de um novo usuário do sistema
+security.role.role_user_update.name=Edição de usuário
+security.role.role_user_update.description=Permissão para edição dos dados e permissões de um usuário do sistema
+security.role.role_group_read.name=Leitura de grupo 
+security.role.role_group_read.description=Permissão para leitura dos dados de grupo
+security.role.role_group_create.name=Criação de grupo
+security.role.role_group_create.description=Permissão para criação de um novo grupo do sistema
+security.role.role_group_update.name=Edição de grupo
+security.role.role_group_update.description=Permissão para edição dos dados e permissões de um grupo do sistema
+security.role.role_group_delete.name=Exclusão de grupo
+security.role.role_group_delete.description=Permissão para exclusão de um grupo do sistema
+security.role.role_person_search.name=Pesquisa de Pessoas
+security.role.role_person_search.description=Permissão para pesquisa de Pessoas
+security.role.role_company_search.name=Pesquisa de Empresas
+security.role.role_company_search.description=Permissão para pesquisa de Empresas
+security.role.role_vehicle_search.name=Pesquisa de Veículos
+security.role.role_vehicle_search.description=Permissão para pesquisa de Veículos
+security.role.role_address_search.name=Pesquisa de CEPs
+security.role.role_address_search.description=Permissão para pesquisa de CEPs
+security.role.role_finance_data.name=Controle Financeiro
+security.role.role_finance_data.description=Permissão para controle financeiro do usuário
