--- a/service/core/src/main/resources/strings/core-strings_pt_BR.properties
+++ b/service/core/src/main/resources/strings/core-strings_pt_BR.properties
@@ -1,20 +1,4 @@
-core.context.session.user.not-logged=O usuário não está logado
-core.context.session.user.not-allowed=O usuário não possui permissão
-core.exception.response.message.no-message=Nenhuma mensagem disponível
-core.exception.entity.validation.validation-error=A entidade possui erros
-core.model.general.gender.cis-male=Masculino
-core.model.general.gender.cis-female=Feminino
-core.model.general.gender.no-gender=Agênero
-core.model.general.gender.androgynous-gender=Andrógino
-core.model.general.gender.bi-gender=Bigênero
-core.model.general.gender.non-binary=Não binário
-core.model.general.gender.neutral-gender=Neutro
-core.model.general.gender.trans-male=Trans Masculino
-core.model.general.gender.trans-female=Trans Feminino
-core.model.general.gender.male-transgender=Transgênero Masculino
-core.model.general.gender.female-transgender=Transgênero Feminino
-core.model.general.gender.male-transsexual=Transsexual Masculino
-core.model.general.gender.female-transsexual=Transsexual Feminino
-core.model.general.gender.other-gender=Outro
-core.model.security.profile.common-user=Comum
-core.model.security.profile.administrator-user=Administrador
+context.current-session.current-user.not-logged=O usuário não está logado
+context.current-session.current-user.not-allowed=O usuário não possui permissão
+exception.exception-response.error-message.default-message=Nenhuma mensagem disponível
+validation.entity-validation.invalid.error-message=A entidade possui erros
