--- a/service/core/src/main/resources/strings/core-roles-groups_pt_BR.properties
+++ b/service/core/src/main/resources/strings/core-roles-groups_pt_BR.properties
@@ -1,8 +1,8 @@
-core.role.group.master.name=Master
-core.role.group.master.description=Grupo das permissões master
-core.role.group.management.name=Gerenciamento
-core.role.group.management.description=Grupo de permissões de gerenciamento
-core.role.group.sherlock.name=Sherlock
-core.role.group.sherlock.description=Grupo de permissões de buscas
-core.role.group.finance.name=Finanças
-core.role.group.finance.description=Grupo de permissões de finanças
+security.role-group.master.name=Master
+security.role-group.master.description=Grupo das permissões master
+security.role-group.management.name=Gerenciamento
+security.role-group.management.description=Grupo de permissões de gerenciamento
+security.role-group.sherlock.name=Sherlock
+security.role-group.sherlock.description=Grupo de permissões de buscas
+security.role-group.finance.name=Finanças
+security.role-group.finance.description=Grupo de permissões de finanças
