--- a/service/core/src/main/resources/strings/core-strings_pt_BR.properties
+++ b/service/core/src/main/resources/strings/core-strings_pt_BR.properties
@@ -1,4 +1,4 @@
 context.current-session.current-user.not-logged=O usuário não está logado
 context.current-session.current-user.not-allowed=O usuário não possui permissão
-exception.exception-response.error-message.default-message=Nenhuma mensagem disponível
+exception.detailed-exception.message.default=Nenhuma mensagem disponível
 validation.entity-validation.invalid.error-message=A entidade possui erros
