Implementing spring-base module

--- a/service/infrastructure/spring/spring-base/src/main/resources/strings/spring-strings_pt_BR.properties
+++ b/service/infrastructure/spring/spring-base/src/main/resources/strings/spring-strings_pt_BR.properties
@@ -1,2 +1,7 @@
 exception.throwable.message.default=Nenhuma mensagem disponível
-exception.invalid-argument.message.parameter-errors=Os parâmetros da requisição são inválidos
+exception.invalid-argument.parameter-errors.message=Os parâmetros da requisição são inválidos
+request.page-request.parameter-validation.invalid-size=O parâmetro de ordenação não pode conter mais de 2 valores
+request.page-request.parameter-validation.invalid-number=O parâmetro {0} deve ser um número
+request.page-request.parameter-validation.invalid-field=O campo da ordenação não pode ser nulo
+request.page-request.parameter-validation.invalid-sort={0} não é um tipo de ordenação válido
+request.filter-chain.authentication-entrypoint.access-denied=Acesso negado
