Implementing spring-base module

--- a/service/infrastructure/authentication/authentication-jwt-auth0/src/main/resources/strings/authentication-jwt-auth0_pt_BR.properties
+++ b/service/infrastructure/authentication/authentication-jwt-auth0/src/main/resources/strings/authentication-jwt-auth0_pt_BR.properties
@@ -3,6 +3,6 @@ authentication.token.retrieve-claim.invalid-id=O id do usuário do token não pe v
 authentication.token.retrieve-user.not-found=Usuário não encontrado
 authentication.token.retrieve-user.inactive-user=Usuário inativo
 authentication.token.validate-token.expired-token=Token expirado
-authentication.token.validate-token.decode-error=Tokan inválido
+authentication.token.validate-token.decode-error=Token inválido
 authentication.token.validate-token.invalid-signature=Assinatura do token inválida
 authentication.token.validate-token.invalid-issuer=Emissor do token inválido
