--- a/service/infrastructure/spring/spring-base/src/main/resources/strings/spring-strings_pt_BR.properties
+++ b/service/infrastructure/spring/spring-base/src/main/resources/strings/spring-strings_pt_BR.properties
@@ -4,4 +4,5 @@ request.page-request.parameter-validation.invalid-size=O parâmetro de ordenação 
 request.page-request.parameter-validation.invalid-number=O parâmetro {0} deve ser um número
 request.page-request.parameter-validation.invalid-field=O campo da ordenação não pode ser nulo
 request.page-request.parameter-validation.invalid-sort={0} não é um tipo de ordenação válido
+request.request.parameter-validation.convert-error=O campo ''{0}'' não pode receber o valor ''{1}''
 request.filter-chain.authentication-entrypoint.access-denied=Acesso negado
