--- a/core/src/main/resources/strings/core-roles-groups_en_US.properties
+++ b/core/src/main/resources/strings/core-roles-groups_en_US.properties
@@ -1,4 +1,6 @@
-security.role-group.master.name=Master
-security.role-group.master.description=Group of the master roles
-security.role-group.management_organization.name=Management
-security.role-group.management_organization.description=Group of the management roles
+security.role-group.organization.master.name=Master
+security.role-group.organization.master.description=Group of master permission
+security.role-group.organization.management.name=Management
+security.role-group.organization.management.description=Group of management permission
+security.role-group.member.accounting.name=Accounting
+security.role-group.member.accounting.description=Group of accounting permission
