--- a/core/src/main/resources/strings/core-roles-subgroups_en_US.properties
+++ b/core/src/main/resources/strings/core-roles-subgroups_en_US.properties
@@ -1,8 +1,10 @@
-security.role-subgroup.master_subgroup.name=Master
-security.role-subgroup.master_subgroup.description=Subgroup of the master roles
-security.role-subgroup.management_organization_user.name=Users
-security.role-subgroup.management_organization_user.description=Subgroup of the users roles
-security.role-subgroup.management_organization_group.name=Groups
-security.role-subgroup.management_organization_group.description=Subgroup of the groups roles
-security.role-subgroup.management_organization_hub.name=Hub
-security.role-subgroup.management_organization_hub.description=Subgroup of the hubs roles
+security.role-subgroup.organization.master_subgroup.name=Master
+security.role-subgroup.organization.master_subgroup.description=Subgroup of the master roles
+security.role-subgroup.organization.management_user.name=Users
+security.role-subgroup.organization.management_user.description=Subgroup of the users roles
+security.role-subgroup.organization.management_group.name=Groups
+security.role-subgroup.organization.management_group.description=Subgroup of the groups roles
+security.role-subgroup.organization.management_member.name=Member
+security.role-subgroup.organization.management_member.description=Subgroup of the members roles
+security.role-subgroup.member.accounting_coa.name=Chart of accounts
+security.role-subgroup.member.accounting_coa.description=Subgroup of the chart of accounts
