--- a/core/src/main/resources/strings/core-roles_en_US.properties
+++ b/core/src/main/resources/strings/core-roles_en_US.properties
@@ -1,24 +1,32 @@
-security.role.master.name=Master
-security.role.master.description=Master role of the system, with access to all system functionalities
-security.role.role_organization_user_read.name=Read User
-security.role.role_organization_user_read.description=Role to read application user data
-security.role.role_organization_user_create.name=Create User
-security.role.role_organization_user_create.description=Role to create a new application user
-security.role.role_organization_user_update.name=Update User
-security.role.role_organization_user_update.description=Role to update application user data and roles
-security.role.role_organization_group_read.name=Read Group
-security.role.role_organization_group_read.description=Role to read application group data
-security.role.role_organization_group_create.name=Create Group
-security.role.role_organization_group_create.description=Role to create a new application group
-security.role.role_organization_group_update.name=Update Group
-security.role.role_organization_group_update.description=Role to update application group data and roles
-security.role.role_organization_group_delete.name=Delete Group
-security.role.role_organization_group_delete.description=Role to delete application group
-security.role.role_organization_hub_read.name=Read Hub
-security.role.role_organization_hub_read.description=Role to read application hub data
-security.role.role_organization_hub_create.name=Create Hub
-security.role.role_organization_hub_create.description=Role to create a new application hub
-security.role.role_organization_hub_update.name=Update Hub
-security.role.role_organization_hub_update.description=Role to update application hub data and roles
-security.role.role_organization_hub_delete.name=Delete Hub
-security.role.role_organization_hub_delete.description=Role to delete application hub
+security.role.organization.master.name=Master
+security.role.organization.master.description=Master permission of the system, with all access
+security.role.organization.user_read.name=Read user
+security.role.organization.user_read.description=Role to read organization user data
+security.role.organization.user_create.name=Create user
+security.role.organization.user_create.description=Role to create a new user for the organization
+security.role.organization.user_update.name=Edit user
+security.role.organization.user_update.description=Role to edit organization user data and roles
+security.role.organization.group_read.name=Read group
+security.role.organization.group_read.description=Role to read organization group data
+security.role.organization.group_create.name=Create group
+security.role.organization.group_create.description=Role to create a new group for the organization
+security.role.organization.group_update.name=Edit group
+security.role.organization.group_update.description=Role to edit organization group data and roles
+security.role.organization.group_delete.name=Delete group
+security.role.organization.group_delete.description=Role do delete an organization group
+security.role.organization.member_read.name=Read member
+security.role.organization.member_read.description=Role to read organization member data
+security.role.organization.member_create.name=Create member
+security.role.organization.member_create.description=Role to create a new member for the organization
+security.role.organization.member_update.name=Edit member
+security.role.organization.member_update.description=Role to edit organization member data
+security.role.organization.member_delete.name=Delete member
+security.role.organization.member_delete.description=Role do delete an organization member
+security.role.member.coa_read.name=Read chart of accounts
+security.role.member.coa_read.description=Role to read member chart of accounts data
+security.role.member.coa_create.name=Create chart of accounts
+security.role.member.coa_create.description=Role to create a new chart of accounts for the member
+security.role.member.coa_update.name=Edit chart of accounts
+security.role.member.coa_update.description=Role to edit member chart of accounts data
+security.role.member.coa_delete.name=Delete chart of accounts
+security.role.member.coa_delete.description=Role do delete a member chart of accounts
