--- a/core/src/main/resources/strings/core-roles_en_US.properties
+++ b/core/src/main/resources/strings/core-roles_en_US.properties
@@ -1,5 +1,5 @@
-security.role.organization.master.name=Master
-security.role.organization.master.description=Master permission of the system, with all access
+security.role.organization.organization_all.name=Master
+security.role.organization.organization_all.description=Master permission of the system, with all access
 security.role.organization.user_read.name=Read user
 security.role.organization.user_read.description=Role to read organization user data
 security.role.organization.user_create.name=Create user
@@ -14,19 +14,19 @@ security.role.organization.group_update.name=Edit group
 security.role.organization.group_update.description=Role to edit organization group data and roles
 security.role.organization.group_delete.name=Delete group
 security.role.organization.group_delete.description=Role do delete an organization group
-security.role.organization.member_read.name=Read member
-security.role.organization.member_read.description=Role to read organization member data
-security.role.organization.member_create.name=Create member
-security.role.organization.member_create.description=Role to create a new member for the organization
-security.role.organization.member_update.name=Edit member
-security.role.organization.member_update.description=Role to edit organization member data
-security.role.organization.member_delete.name=Delete member
-security.role.organization.member_delete.description=Role do delete an organization member
-security.role.member.coa_read.name=Read chart of accounts
-security.role.member.coa_read.description=Role to read member chart of accounts data
-security.role.member.coa_create.name=Create chart of accounts
-security.role.member.coa_create.description=Role to create a new chart of accounts for the member
-security.role.member.coa_update.name=Edit chart of accounts
-security.role.member.coa_update.description=Role to edit member chart of accounts data
-security.role.member.coa_delete.name=Delete chart of accounts
-security.role.member.coa_delete.description=Role do delete a member chart of accounts
+security.role.organization.unit_read.name=Read unit
+security.role.organization.unit_read.description=Role to read organization unit data
+security.role.organization.unit_create.name=Create unit
+security.role.organization.unit_create.description=Role to create a new unit for the organization
+security.role.organization.unit_update.name=Edit unit
+security.role.organization.unit_update.description=Role to edit organization unit data
+security.role.organization.unit_delete.name=Delete unit
+security.role.organization.unit_delete.description=Role do delete an organization unit
+security.role.unit.coa_read.name=Read chart of accounts
+security.role.unit.coa_read.description=Role to read unit chart of accounts data
+security.role.unit.coa_create.name=Create chart of accounts
+security.role.unit.coa_create.description=Role to create a new chart of accounts for the unit
+security.role.unit.coa_update.name=Edit chart of accounts
+security.role.unit.coa_update.description=Role to edit unit chart of accounts data
+security.role.unit.coa_delete.name=Delete chart of accounts
+security.role.unit.coa_delete.description=Role do delete a unit chart of accounts
