--- a/core/src/main/resources/strings/core-roles-categories_en_US.properties
+++ b/core/src/main/resources/strings/core-roles-categories_en_US.properties
@@ -1,4 +1,4 @@
 security.role-category.organization.name=Organization
 security.role-category.organization.description=Organization category roles
-security.role-category.member.name=Member
-security.role-category.member.description=Member category roles
+security.role-category.unit.name=Unit
+security.role-category.unit.description=Unit category roles
