--- a/core/src/main/resources/strings/core-roles-subgroups_en_US.properties
+++ b/core/src/main/resources/strings/core-roles-subgroups_en_US.properties
@@ -1,10 +1,10 @@
-security.role-subgroup.organization.master_subgroup.name=Master
-security.role-subgroup.organization.master_subgroup.description=Subgroup of the master roles
+security.role-subgroup.organization.organization_subgroup.name=Master
+security.role-subgroup.organization.organization_subgroup.description=Subgroup of the master roles
 security.role-subgroup.organization.management_user.name=Users
 security.role-subgroup.organization.management_user.description=Subgroup of the users roles
 security.role-subgroup.organization.management_group.name=Groups
 security.role-subgroup.organization.management_group.description=Subgroup of the groups roles
-security.role-subgroup.organization.management_member.name=Member
-security.role-subgroup.organization.management_member.description=Subgroup of the members roles
-security.role-subgroup.member.accounting_coa.name=Chart of accounts
-security.role-subgroup.member.accounting_coa.description=Subgroup of the chart of accounts
+security.role-subgroup.organization.management_unit.name=Unit
+security.role-subgroup.organization.management_unit.description=Subgroup of the units roles
+security.role-subgroup.unit.accounting_coa.name=Chart of accounts
+security.role-subgroup.unit.accounting_coa.description=Subgroup of the chart of accounts
